--- a/app/src/main/res/layout/riskassesment_detail.xml
+++ b/app/src/main/res/layout/riskassesment_detail.xml
@@ -64,6 +64,19 @@
                     </odoo.controls.OField>
 
                     <odoo.controls.OField
+                        android:id="@+id/subject"
+                        app:controlLabel="@string/subject"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:fieldLabelColor="@color/theme_secondary"
+                        app:fieldName="subject"
+                        app:fieldTextAppearance="?android:textAppearanceMedium"
+                         >
+
+                    </odoo.controls.OField>
+
+
+                    <odoo.controls.OField
                         android:id="@+id/partner_id"
                         app:controlLabel="@string/partner_id"
                         android:layout_width="match_parent"
@@ -71,10 +84,13 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="partner_id"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        >
+                         >
 
                     </odoo.controls.OField>
 
+                    <View
+                        style="@style/ViewSeparator"
+                        android:layout_marginLeft="72dp" />
 
                     <odoo.controls.OField
                         android:id="@+id/assesment_method"
@@ -85,34 +101,24 @@
                         app:fieldName="assesment_method"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         >
-                        <!--  app:iconResource="@drawable/ic_action_phone"-->
-                    </odoo.controls.OField>
+                    <!--  app:iconResource="@drawable/ic_action_phone"-->
+                 </odoo.controls.OField>
 
-                    <!-- <odoo.controls.OField
-                         android:id="@+id/procedure_id"
-                         android:layout_width="match_parent"
-                         android:layout_height="wrap_content"
-                         app:fieldLabelColor="@color/theme_secondary"
-                         app:fieldName="procedure_id"
-                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                         app:iconResource="@drawable/ic_action_mobile"></odoo.controls.OField>-->
+                <!-- <odoo.controls.OField
+                     android:id="@+id/procedure_id"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     app:fieldLabelColor="@color/theme_secondary"
+                     app:fieldName="procedure_id"
+                     app:fieldTextAppearance="?android:textAppearanceMedium"
+                     app:iconResource="@drawable/ic_action_mobile"></odoo.controls.OField>-->
 
 
                     <!--<View
                         style="@style/ViewSeparator"
                         android:layout_marginLeft="72dp" />-->
-                    <odoo.controls.OField
-                        android:id="@+id/subject"
-                        app:controlLabel="@string/subject"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="subject"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"
-                        >
 
-                    </odoo.controls.OField>
-                    <odoo.controls.OField
+                        <odoo.controls.OField
                         android:id="@+id/date_performed"
 
                         android:layout_width="match_parent"
@@ -123,7 +129,7 @@
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         >
 
-                    </odoo.controls.OField>
+                        </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:id="@+id/date_valid_before"
@@ -144,9 +150,16 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="date_updated"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        >
+                         >
 
                     </odoo.controls.OField>
+
+
+
+                    <View
+                        style="@style/ViewSeparator"
+                        android:layout_marginLeft="72dp" />
+
 
                 </odoo.controls.OForm>
             </LinearLayout>
@@ -338,7 +351,7 @@
                         android:layout_height="wrap_content"
                         app:fieldName="mobile"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        >
+                      >
                     </odoo.controls.OField>
 
                     <View
