--- a/app/src/main/res/layout/customer_detail.xml
+++ b/app/src/main/res/layout/customer_detail.xml
@@ -65,7 +65,9 @@
                         android:layout_height="wrap_content"
                         app:fieldName="is_company"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:showLabel="false"></odoo.controls.OField>
+                        app:showLabel="false">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:id="@+id/website"
@@ -74,7 +76,9 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="website"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_universe"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_universe">
+
+                    </odoo.controls.OField>
 
 
                     <odoo.controls.OField
