--- a/app/src/main/res/values/base-strings.xml
+++ b/app/src/main/res/values/base-strings.xml
@@ -34,6 +34,7 @@
     <string name="label_select_user">Login to User</string>
     <string name="label_accounts">Accounts</string>
     <string name="label_settings">Settings</string>
+    <string name="label_Risk">Riskler</string>
     <string name="label_save">Save</string>
     <string name="label_edit">Kayit</string>
     <string name="label_required">required</string>
