--- a/app/src/main/res/layout/riskassesment_detail.xml
+++ b/app/src/main/res/layout/riskassesment_detail.xml
@@ -47,18 +47,6 @@
                 android:paddingTop="@dimen/default_16dp"
                 android:weightSum="1">
 
-                <ExpandableListView
-                    android:id="@+id/expandableListView"
-                    android:layout_width="133dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center_horizontal"
-                    android:choiceMode="singleChoice"
-                    android:visibility="visible"
-                    android:theme="@style/AppTheme.Base"
-                    android:textFilterEnabled="false"
-                    android:foreground="#74000000"
-                    style="@style/Base.CardView" />
-
                 <odoo.controls.OForm
                     android:id="@+id/riskForm"
                     android:layout_width="match_parent"
@@ -166,6 +154,7 @@
 
                 </odoo.controls.OForm>
             </LinearLayout>
+
         </RelativeLayout>
     </com.odoo.widgets.parallax.ParallaxScrollView>
 
@@ -387,6 +376,24 @@
         android:paddingRight="@dimen/default_8dp"
         android:paddingTop="@dimen/statusBarHeight"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
-        app:theme="@style/ToolBarTheme" />
+        app:theme="@style/ToolBarTheme"
+        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark" />
+
+    <ExpandableListView
+        android:id="@+id/expandableListView"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal"
+        android:choiceMode="singleChoice"
+        android:textFilterEnabled="false"
+        style="@style/AppBar.Dark"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible"
+        android:headerDividersEnabled="false"
+        android:clickable="true"
+        android:theme="@style/AppBar.Dark"
+        android:layout_marginTop="25dp"
+        android:foregroundTint="#4264fc05" />
 
 </RelativeLayout>
