--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,14 +22,14 @@
 
     <!-- Android Style Colors -->
     <color name="android_blue">#33B5E5</color>
-    <color name="android_blue_dark">#0099CC</color>
+    <color name="android_blue_dark">#0099cc</color>
     <color name="android_violet">#AA66CC</color>
     <color name="android_violet_dark">#9933CC</color>
     <color name="android_green">#99CC00</color>
     <color name="android_green_dark">#669900</color>
     <color name="android_orange">#FFBB33</color>
     <color name="android_orange_dark">#FF8800</color>
-    <color name="android_red">#FF4444</color>
+    <color name="android_red">#ffc24a</color>
     <color name="android_red_dark">#CC0000</color>
 
     <color name="control_focused">#e5e5e5</color>
